fix line breaks in TimeInfo, add duration parser

--- a/client/src/components/TimeInfo/TimeInfo.scss
+++ b/client/src/components/TimeInfo/TimeInfo.scss
@@ -37,3 +37,7 @@
     flex-direction: row;
     align-items: center;
 }
+
+.TimeInfo-DateTime_breakLine_no {
+    white-space:nowrap;
+}
